welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:49: error: ';' expected but ')' found.
  avancex5);
          ^